# rocas

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  release.toml  rocas.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
nix/: package.nix
nix/modules/: home-manager.nix  nixos.nix
rocas/: CHANGELOG.md  Cargo.toml  build.rs  release.toml
rocas/src/: art.rs  autostart.rs  cli.rs  config.rs  logger.rs  main.rs  pattern.rs  updater.rs
watcher/: Cargo.toml
watcher/src/: lib.rs
