[package]
name = "rocas"
version = "1.3.2"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
winres = "0.1"

[dependencies]
log.workspace = true
auto-launch = "0.6.0"
dirs = "6.0.0"
thiserror = "2.0.18"
self_update = { version = "0.43.0", default-features = false, features = [
  "rustls",
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.182"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[dependencies.watcher]
version = "0.1.0"
path = "../watcher"

[dependencies.forgeconf]
git = "https://github.com/chikof/forgeconf"
rev = "a5f2c912804eee94df0b712996c9e43df6d177c4"
features = ["toml", "miette", "validators"]
default-features = false
