[package]
name = "rocas"
version = "1.4.0"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
winres = "0.1"

[dependencies]
log.workspace = true
auto-launch = "0.6.0"
dirs = "6.0.0"
thiserror = "2.0.18"
self_update = { version = "0.44.0", default-features = false, features = [
    "reqwest",
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
clap = { version = "=4.6.1", features = ["derive"] }
clap_derive = "4.0.0-rc.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.182"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[dependencies.watcher]
version = "0.1.0"
path = "../watcher"

[dependencies.forgeconf]
git = "https://github.com/chikof/forgeconf.git"
rev = "55511f4a1be57c85c0144d8ce6120385d8125b81"
features = ["toml", "miette", "validators", "clap", "cli"]
default-features = false
